--- a/assets/levelup/lang/en_US.lang
+++ b/assets/levelup/lang/en_US.lang
@@ -1,3 +1,76 @@
 ﻿
 item.respecBook.name=Book of Unlearning
 item.xpTalisman.name=Talisman of Wonder
+
+hud.skill.text1=Skill Points:
+hud.skill.text2=Class:  
+hud.skill.select=Choose a Class
+
+
+skill1.name=Mining
+skill1.tooltip1=Every 1: + chance: 2x ore drops
+skill1.tooltip2=Every 5: + mining speed
+skill2.name=Sword
+skill2.tooltip1=Every 1: + chance: random crit
+skill2.tooltip2=Every 5: + damage with items
+skill3.name=Defense
+skill3.tooltip1=Every 1: + chance: 'super block'
+skill3.tooltip2=Every 5: - damage from mobs
+skill4.name=WoodCutting
+skill4.tooltip1=Every 1: + chance: more wood drops
+skill4.tooltip2=Every 5: + chopping speed
+skill5.name=Smelting
+skill5.tooltip1=Every 1: + chance: 2x smelt yield
+skill5.tooltip2=Every 5: + smelting speed
+skill6.name=Archery
+skill6.tooltip1=Every 1: + arrow speed
+skill6.tooltip2=Every 5: + bow drawback speed
+skill7.name=Athletics
+skill7.tooltip1=Every 1: + sprint speed
+skill7.tooltip2=Every 5: - falling damage
+skill8.name=Cooking
+skill8.tooltip1=Every 1: + chance: 2x cook yield
+skill8.tooltip2=Every 5: + cooking speed
+skill9.name=Sneaking
+skill9.tooltip1=Every 1: + sneak speed
+skill9.tooltip2=Every 5: - mob sight range with sneak
+skill10.name=Farming
+skill10.tooltip1=Every 1: + crop grow speed
+skill10.tooltip2=Every 5: + chance: 2x wheat drops
+skill11.name=Fishing
+skill11.tooltip1=Every 1: + chance: getting a bite
+skill11.tooltip2=Every 5: + chance: fish up loot
+skill12.name=Digging
+skill12.tooltip1=Every 1: + chance: digging up loot
+skill12.tooltip2=Every 5: + chance: flint from gravel
+
+gui.class.title=Your Class: 
+
+class0.name=<None>
+class0.tooltip= 
+class1.name=Miner
+class1.tooltip=Miner: +10 Mining, +5 Digging, +5 Smelting | Extra XP from mining
+class2.name=Warrior
+class2.tooltip=Warrior: +10 Melee, +5 Defense, +5 Marksman | Extra XP from combat
+class3.name=Artisan
+class3.tooltip=Artisan: +10 Smelting, +5 Woodcutting, +5 Cooking | Extra XP from crafting
+class4.name=Spelunker
+class4.tooltip=Spelunker: +10 Defense, +5 Athletics, +5 Mining | Extra XP from mining
+class5.name=Scout
+class5.tooltip=Scout: +10 Marksman, +5 Stealth, +5 Athletics | Extra XP from combat
+class6.name=Farmer
+class6.tooltip=Farmer: +10 Farming, +5 Fishing, +5 Woodcutting | Extra XP from crafting
+class7.name=Archeologist
+class7.tooltip=Archeologist: +10 Digging, +5 Mining, +5 Woodcutting | Extra XP from mining
+class8.name=Assassin
+class8.tooltip=Assassin: +10 Stealth, +5 Melee, +5 Marksman | Extra XP from combat
+class9.name=Lumberjack
+class9.tooltip=Lumberjack: +10 Woodcutting, +5 Defense, +5 Athletics | Extra XP from crafting
+class10.name=Hermit
+class10.tooltip=Hermit: +10 Cooking, +5 Mining, +5 Digging | Extra XP from mining
+class11.name=Zealot
+class11.tooltip=Zealot: +10 Athletics, +5 Melee, +5 Defense | Extra XP from combat
+class12.name=Fisherman
+class12.tooltip=Fisherman: +10 Fishing, +5 Cooking, +5 Woodcutting | Extra XP from crafting
+class13.name=Freelancer
+class13.tooltip=Freelancer: +20 Skill Points | No Extra XP
