--- a/assets/levelup/lang/en_US.lang
+++ b/assets/levelup/lang/en_US.lang
@@ -82,5 +82,6 @@ config.levelup.title=LevelUp! Configuration Screen
 config.levelup.option0=Allow HUD : %b
 config.levelup.option1=Render HUD on Top Left : %b
 config.levelup.option2=Render HUD on Exp Bar : %b
+config.levelup.option3=FOV is based on speed : %b
 
 sneak.attack=Sneak attack for %d x damage!
