--- a/assets/levelup/lang/fr_FR.lang
+++ b/assets/levelup/lang/fr_FR.lang
@@ -82,5 +82,6 @@ config.levelup.title=LevelUp! Ecran de Configuration
 config.levelup.option0=Activer Info : %b
 config.levelup.option1=Afficher Info en haut à gauche : %b
 config.levelup.option2=Afficher Info sur barre d'XP : %b
+config.levelup.option3=Champ de vision indexé sur la vitesse : %b
 
 sneak.attack=Attack surprise: %d x damage!
